# OpenAvatarChat

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  Dockerfile  README.md  build_and_run.sh  install.py  pyproject.toml  readme_cn.md  readme_en.md  requirements.txt  setup.cfg
config/: chat_with_gs.yaml  chat_with_minicpm.yaml  chat_with_openai_compatible.yaml  chat_with_openai_compatible_bailian_cosyvoice.yaml  chat_with_openai_compatible_edge_tts.yaml  sample.yaml
scripts/: compile_requirements.sh  create_ssl_certs.sh  download_MiniCPM-o_2.6-int4.sh  download_MiniCPM-o_2.6.sh  setup_coturn.sh
src/: demo.py
src/avatar/: avatar_output_handler.py  avatar_processor.py  avatar_processor_factory.py
src/avatar/algo/: audio2signal_speed_limiter.py  base_algo_adapter.py  tts2face_cpu_adapter.py
src/avatar/media/: speech_audio_processor.py  video_audio_aligner.py
src/avatar/model/: algo_model.py  audio_input.py
src/chat_engine/: chat_engine.py
src/chat_engine/common/: chat_data_type.py  client_handler_base.py  engine_channel_type.py  handler_base.py
src/chat_engine/contexts/: handler_context.py  session_context.py
src/chat_engine/core/: chat_session.py  handler_manager.py
src/chat_engine/data_models/: chat_data_type.py  chat_engine_config_data.py  chat_signal.py  chat_signal_type.py  session_info_data.py
src/chat_engine/input_handlers/: input_handler_vad.py
src/chat_engine/output_handlers/: output_handler_s2v.py
src/chat_engine/think_handlers/: handler_s2s.py
src/engine_utils/: general_slicer.py  inspect_utils.py  media_utils.py  time_utils.py
src/handlers/avatar/liteavatar/: avatar_handler_liteavatar.py  avatar_output_handler.py  avatar_processor.py  avatar_processor_factory.py  pyproject.toml  requirements.txt
src/handlers/avatar/liteavatar/algo/: audio2signal_speed_limiter.py  base_algo_adapter.py  bg_frame_counter.py  tts2face_cpu_adapter.py
src/handlers/avatar/liteavatar/media/: speech_audio_processor.py
src/handlers/avatar/liteavatar/model/: algo_model.py
src/handlers/tts/cosyvoice/: cosyvoice_processor.py  pyproject.toml  requirements.txt  tts_handler_cosyvoice.py
src/service/: logger_config_data.py  service_config_data.py
src/service/rtc_service/: base_turn_provider.py  rtc_provider.py  rtc_stream.py
src/service/service_data_models/: service_config_data.py
src/service/service_utils/: logger_utils.py  service_config_loader.py  (+1 more)
src/utils/: directory_info.py  general_slicer.py  inspect_utils.py  interval_counter.py  media_utils.py
tests/unittest/: test_bg_frame_counter.py  test_general_slicer.py  test_speech_audio_processor.py
(+40 files in other folders)
